--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Hello</h1>
-    <a href='https://fujinxiang.github.io/fabric/bg.html'>Fabric 背景生成</a>
+    <a href='/fabric/bg.html' target="_blank">Fabric 背景生成</a>
 </body>
 </html>
