--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Hello</h1>
     <a href='/fabric/bg.html' target="_blank">Fabric 背景生成</a>
+    <a href='/webrtc/index.html' target="_blank">WebRTC Demo</a>
 </body>
 </html>
