--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fuma</title>
 </head>
+
 <body>
     <h1>Hello</h1>
     <a href='/fabric/bg.html' target="_blank">Fabric 背景生成</a>
-    <a href='/webrtc/index.html' target="_blank">WebRTC Demo</a>
+    <a href='/webtorrent' target="_blank">WebTorrent</a>
 </body>
+
 </html>
