--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>Hello</h1>
-    <a href='/fabric/bg.html' target="_blank">Fabric 背景生成</a>
+    <a href='/fabric' target="_blank">Fabric 背景生成</a>
     <a href='/webtorrent' target="_blank">WebTorrent</a>
 </body>
 
