--- a/fabric/index.html
+++ b/fabric/index.html
@@ -21,7 +21,7 @@
         }
     </style>
     <script src="https://cdn.jsdelivr.net/npm/fabric@4.2.0/dist/fabric.min.js"></script>
-    <script src="https://qn-store-pub-tx.seewo.com/statics/js/vue/3.2.45/vue.global.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@3.3.4/dist/vue.global.min.js"></script>
     <script src="./cover.js"></script>
 </head>
 
