--- a/fabric/index.html
+++ b/fabric/index.html
@@ -19,6 +19,9 @@
         #vue-container{
             margin: 6px 0;
         }
+        #canvas1{
+            border: 1px solid #ccc;
+        }
     </style>
     <script src="https://cdn.jsdelivr.net/npm/fabric@4.2.0/dist/fabric.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue@3.3.4/dist/vue.global.min.js"></script>
