--- a/md5/index.html
+++ b/md5/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
-    <title>上传到 CDN</title>
+    <title>计算MD5</title>
     <script src="https://cdn.jsdelivr.net/npm/spark-md5@3.0.2/spark-md5.min.js"></script>
-    <script src="https://oss.fujinxiang.cn/js/dragzone.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/fmstatics/dist/dragzone.min.js"></script>
     <style>
       #container {
         cursor: pointer;
