--- a/index.html
+++ b/index.html
@@ -8,20 +8,25 @@
     <script src="https://cdn.jsdelivr.net/npm/vue@3.3.4/dist/vue.global.min.js"></script>
     <script src="./data.js"></script>
     <style>
+      body{
+        background-color: #0e87c0;
+      }
       .item-card {
         display: inline-block;
         width: 150px;
         height: 60px;
         line-height: 60px;
-        color: #333;
-        border: 1px solid #ccc;
+        border: 1px solid #0e87c0;
+        background-color: #fff;
+        color: #0e87c0;
         margin: 10px;
         text-align: center;
         text-decoration: none;
       }
 
       .item-card:hover {
-        border: 1px solid #aaa;
+        border: 1px solid #fff;
+        /* box-shadow: 0 0 10px #0e87c0; */
       }
     </style>
   </head>
